2003-04-24  Andreas Kupries  <andreask@activestate.com>

	* ntp_time.man: Cleanup of RFC referencing.

	* time.tcl (unixtime): [SF Bug #723426] Added code to handle
	  possibility of failure in "binary scan". (ClientReadEvent):
	  Changed to append partial results, allow for empty reads.

	* time.test: [SF Bug #723426]. Corrected non-unique test
	  names. Handle a missing tcltest::interpreter and fall back to
	  [info nameofexecutable].

2003-04-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* time.man:      Renamed the man page to avoid clashing with
	* ntp_time.man:  the tcl time.n manual page.

2003-03-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* time.test: Added a test package.
	* pkgIndex.tcl: Added a package index file.

2003-03-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* time.tcl:
	* time.man: Initial checkin of an RFC 868 client.
	* examples/ntp/rdate.tcl: A demo using the time package to request
	the current time from a remote host via tcp or udp.
	