@@ -1,3 +1,10 @@
+2003-05-02  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* time.tcl (unixtime): Applied patch from Andreas Kupries to
+	ensure the result is always an integer. 
+	* time.test: Make sure the server returns integer values and check
+	the range is valid (rather than just checking for integer).
+
 2003-04-24  Andreas Kupries  <andreask@activestate.com>
 
 	* ntp_time.man: Cleanup of RFC referencing.
